--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Tests Let the **tests drive your development** or write your tests after. The choice is up to you! As for the testing tools use:   - [mocha](https://mochajs.org/)   - [chai](https://chaijs.com/)   - [supertest](https://github.com/visionmedia/supertest)     - [supertest is built upon `superagent` so these docs will be helpful as well](https://github.com/visionmedia/superagent)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --bail --watch"
   },
   "repository": {
     "type": "git",
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/Alexithemia/articles-products-and-express#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mocha": "^5.2.0",
+    "supertest": "^3.4.2"
   }
 }
