--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "chai": "^4.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "knex": "^0.16.3",
     "method-override": "^3.0.0",
     "mocha": "^5.2.0",
+    "pg": "^7.8.0",
     "supertest": "^3.4.2"
   }
 }
